--- a/pom.xml
+++ b/pom.xml
@@ -773,9 +773,9 @@
             </dependency>
 
             <dependency>
-                <groupId>taglibs</groupId>
-                <artifactId>standard</artifactId>
-                <version>1.1.2</version>
+                <groupId>org.glassfish.web</groupId>
+                <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+                <version>3.0.1</version>
                 <scope>test</scope>
             </dependency>
 
