--- a/pom.xml
+++ b/pom.xml
@@ -1069,6 +1069,12 @@
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-core-impl</artifactId>
                 <version>5.1.2.Final</version>
+                <exclusions>
+					<exclusion>
+						<groupId>jakarta.annotation</groupId>
+               			<artifactId>jakarta.annotation-api</artifactId>
+					</exclusion>
+				</exclusions>
             </dependency>
 
             <dependency>
