WW-5335 Prepares for Java 17 & Struts 7.x

--- a/.github/workflows/scorecards-analysis.yaml
+++ b/.github/workflows/scorecards-analysis.yaml
@@ -20,7 +20,9 @@ on:
   schedule:
     - cron: "30 1 * * 6"    # Weekly on Saturdays
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+      - release/struts-7-0-x
 
 permissions: read-all
 
