--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ on:
   push:
     branches:
       - master
+      - release/struts-7-0-x
 
 permissions: read-all
 
@@ -33,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '17', '21' ]
+        java: [ '17', '21' ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
