--- a/pom.xml
+++ b/pom.xml
@@ -836,9 +836,9 @@
                 <version>4.4</version>
             </dependency>
             <dependency>
-                <groupId>commons-fileupload</groupId>
-                <artifactId>commons-fileupload</artifactId>
-                <version>1.5</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-fileupload2-jakarta</artifactId>
+                <version>2.0.0-M1</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
