--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 
     <modules>
         <module>bom</module>
+        <module>freemarker-jakarta</module>
         <module>core</module>
         <module>plugins</module>
         <module>bundles</module>
@@ -522,8 +523,19 @@
                 <groupId>org.apache.struts</groupId>
                 <artifactId>struts-annotations</artifactId>
                 <version>1.0.8</version>
+                <exclusions>
+					<exclusion>
+						 <groupId>org.freemarker</groupId>
+                		 <artifactId>freemarker</artifactId>
+					</exclusion>
+				</exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-freemarker-jakarta</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-core</artifactId>
