--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -46,10 +46,7 @@
         <module>osgi</module>
         <module>plexus</module>
         <module>rest</module>
-        
-        <!-- TODO -->
-        <!--module>sitemesh</module-->
-        
+        <module>sitemesh</module>        
         <module>spring</module>
         <module>testng</module>
         <module>tiles</module>
