--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -83,6 +83,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.struts</groupId>
+                <artifactId>struts2-embeddedjsp-plugin</artifactId>
+                <version>${struts-version.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-gxp-plugin</artifactId>
                 <version>${struts-version.version}</version>
             </dependency>
