--- a/pom.xml
+++ b/pom.xml
@@ -900,9 +900,9 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>net.sourceforge.htmlunit</groupId>
+                <groupId>org.htmlunit</groupId>
                 <artifactId>htmlunit</artifactId>
-                <version>2.70.0</version>
+                <version>3.6.0</version>
                 <scope>test</scope>
             </dependency>
 
