Upgrades Htmlunit to version 3.6.0

--- a/pom.xml
+++ b/pom.xml
@@ -866,7 +866,6 @@
                 <artifactId>spring-web</artifactId>
                 <version>${spring.platformVersion}</version>
             </dependency>
-
             <dependency>
                 <groupId>mockobjects</groupId>
                 <artifactId>mockobjects-core</artifactId>
@@ -899,9 +898,9 @@
             </dependency>
 
             <dependency>
-                <groupId>net.sourceforge.htmlunit</groupId>
+                <groupId>org.htmlunit</groupId>
                 <artifactId>htmlunit</artifactId>
-                <version>2.70.0</version>
+                <version>3.6.0</version>
                 <scope>test</scope>
             </dependency>
 
