--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-apps</artifactId>
-        <version>6.3.0.1</version>
+        <version>6.3.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-showcase</artifactId>
