--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>6.3.0.2-SNAPSHOT</version>
+        <version>6.3.0.2</version>
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>6.3.0.2-SNAPSHOT</version>
+    <version>6.3.0.2</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -190,7 +190,7 @@
     </dependencyManagement>
 
   <scm>
-    <tag>STRUTS_6_3_0_1</tag>
+    <tag>STRUTS_6_3_0_2</tag>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</developerConnection>
     <url>https://github.com/apache/struts/</url>
