--- a/plugins/testng/pom.xml
+++ b/plugins/testng/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.33-SNAPSHOT</version>
+        <version>2.5.33</version>
     </parent>
 
     <artifactId>struts2-testng-plugin</artifactId>
