Fixes typo in pom

--- a/pom.xml
+++ b/pom.xml
@@ -303,7 +303,7 @@
                         <useDefaultExcludes>true</useDefaultExcludes>
                         <addDefaultLicenseMatchers>false</addDefaultLicenseMatchers>
                         <licenses>
-                            <licens implementation="org.apache.rat.analysis.license.ApacheSoftwareLicense20"/>
+                            <license implementation="org.apache.rat.analysis.license.ApacheSoftwareLicense20"/>
                         </licenses>
                         <licenseFamilies>
                             <licenseFamily implementation="org.apache.rat.license.Apache20LicenseFamily"/>
