--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <jackson.version>2.16.0</jackson.version>
         <log4j2.version>2.20.0</log4j2.version>
-        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <mockito.version>5.8.0</mockito.version>
         <ognl.version>3.3.4</ognl.version>
         <sitemesh.version>2.5.0</sitemesh.version>
