--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,14 @@
                     <artifactId>maven-wrapper-plugin</artifactId>
                     <version>3.1.0</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <configuration>
+                        <outputDirectory>assembly/out</outputDirectory>
+                        <workDirectory>assembly/work</workDirectory>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
