--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <configuration>
+                        <skipAssembly>true</skipAssembly>
+                        <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
                         <outputDirectory>assembly/out</outputDirectory>
                         <workDirectory>assembly/work</workDirectory>
                     </configuration>
