--- a/pom.xml
+++ b/pom.xml
@@ -375,11 +375,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.6.0</version>
                     <configuration>
                         <skipAssembly>true</skipAssembly>
-                        <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
-                        <outputDirectory>assembly/out</outputDirectory>
-                        <workDirectory>assembly/work</workDirectory>
                     </configuration>
                 </plugin>
             </plugins>
