--- a/pom.xml
+++ b/pom.xml
@@ -636,6 +636,13 @@
                 <version>3.1.8</version>
             </dependency>
 
+            <!-- override version of error_prone_annotations until caffeine updates from 2.10.0 to 2.23.0 -->
+            <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_annotations</artifactId>
+                <version>2.23.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.framework</artifactId>
