WW-5388 Fixes a few issues in Servlet 6 file upload usage - removes duplicated validation messages where both interceptors have been used - defines a proper error message on a general file upload exception - removes generic definition in tests

--- a/core/src/main/resources/org/apache/struts2/struts-messages.properties
+++ b/core/src/main/resources/org/apache/struts2/struts-messages.properties
@@ -72,7 +72,8 @@ struts.messages.upload.error.FileUploadSizeException=Request exceeded allowed si
 # 0 - content type
 struts.messages.upload.error.FileUploadContentTypeException=Request has wrong content type: {0}!
 
-struts.messages.upload.error.FileUploadException=Error uploading: {0}!
+# Default error message when handling multi-part request
+struts.messages.upload.error.FileUploadException=Error parsing the multi-part request.
 
 devmode.notification=Developer Notification (set struts.devMode to false to disable this message):\n{0}
 
