--- a/.asf.yaml
+++ b/.asf.yaml
@@ -13,7 +13,13 @@ notifications:
 github:
   del_branch_on_merge: true
   protected_branches:
-    master: { }
+    master:
+      # contexts are the names of checks that must pass.
+      contexts:
+        - Java Maven / Build and Test
+      required_pull_request_reviews:
+        require_code_owner_reviews: true
+        required_approving_review_count: 1
   autolink_jira:
     - WW
   dependabot_alerts:  true
