--- a/.asf.yaml
+++ b/.asf.yaml
@@ -16,7 +16,7 @@ github:
     master:
       # contexts are the names of checks that must pass.
       contexts:
-        - Java Maven / Build and Test
+        - build
       required_pull_request_reviews:
         require_code_owner_reviews: true
         required_approving_review_count: 1
