--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
         <asm.version>9.6</asm.version>
         <jackson.version>2.16.1</jackson.version>
         <log4j2.version>2.23.1</log4j2.version>
-        <ognl.version>3.3.4-atlassian-1</ognl.version>
+        <ognl.version>3.3.5</ognl.version>
         <slf4j.version>2.0.12</slf4j.version>
         <spring.platformVersion>5.3.31</spring.platformVersion>
         <tiles.version>3.0.8</tiles.version>
