--- a/jakarta/velocity-tools-jsp-jakarta/pom.xml
+++ b/jakarta/velocity-tools-jsp-jakarta/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-jakarta</artifactId>
-        <version>7.0.0-M4</version>
+        <version>7.0.0-M5-SNAPSHOT</version>
     </parent>
     <artifactId>struts2-velocity-tools-jsp-jakarta</artifactId>
     <packaging>jar</packaging>
