--- a/plugins/jasperreports/pom.xml
+++ b/plugins/jasperreports/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>7.0.0-M6-SNAPSHOT</version>
+        <version>7.0.0-M6</version>
     </parent>
 
     <artifactId>struts2-jasperreports-plugin</artifactId>
