--- a/jakarta/pom.xml
+++ b/jakarta/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>7.0.0-M6</version>
+        <version>7.0.0-M7-SNAPSHOT</version>
     </parent>
     <artifactId>struts2-jakarta</artifactId>
     <packaging>pom</packaging>
