WW-5414 Always call afterInvocation even in case of exception

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -261,6 +261,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <optional>true</optional>
