--- a/.asf.yaml
+++ b/.asf.yaml
@@ -18,7 +18,8 @@ github:
       contexts:
         - build
       required_pull_request_reviews:
-        require_code_owner_reviews: true
+        # it does not work because our github teams are private/secret, see INFRA-25666
+        require_code_owner_reviews: false
         required_approving_review_count: 1
   autolink_jira:
     - WW
