--- a/jakarta/freemarker-jakarta/pom.xml
+++ b/jakarta/freemarker-jakarta/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-jakarta</artifactId>
-        <version>7.0.0-M7-SNAPSHOT</version>
+        <version>7.0.0-M7</version>
     </parent>
     <artifactId>struts2-freemarker-jakarta</artifactId>
     <packaging>jar</packaging>
