WW-5430 Uses Freemarker native support for JakartaEE instead of manually transforming the artifacts

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -136,8 +136,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.struts</groupId>
-            <artifactId>struts2-freemarker-jakarta</artifactId>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
         </dependency>
 
         <dependency>
