--- a/plugins/cdi/pom.xml
+++ b/plugins/cdi/pom.xml
@@ -43,11 +43,13 @@
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core-impl</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
