--- a/plugins/portlet-junit/pom.xml
+++ b/plugins/portlet-junit/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.5.0</version>
+        <version>6.6.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-portlet-junit-plugin</artifactId>
