--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -137,6 +137,12 @@
            <scope>test</scope>
        </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
        <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
