--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>7.0.0-M9-SNAPSHOT</version>
+        <version>7.0.0-M9</version>
     </parent>
     <artifactId>struts2-core</artifactId>
     <packaging>jar</packaging>
