--- a/plugins/velocity/pom.xml
+++ b/plugins/velocity/pom.xml
@@ -42,11 +42,12 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-velocity-tools-view-jakarta</artifactId>
+            <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-velocity-tools-jsp-jakarta</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
